@@ -1,5 +1,6 @@
 <configure xmlns="http://namespaces.zope.org/zope"
-           xmlns:browser="http://namespaces.zope.org/browser">
+           xmlns:browser="http://namespaces.zope.org/browser"
+           xmlns:zcml="http://namespaces.zope.org/zcml">
 
   <browser:page
     name="reload"
@@ -9,5 +10,10 @@
     template="reload.pt"
     allowed_interface=".interfaces.IReload"
     />
+
+  <subscriber
+    zcml:condition="installed zope.processlifetime"
+    for="zope.processlifetime.IProcessStarting"
+    handler="plone.reload.code.get_mod_times" />
 
 </configure>
